Fix a bit of styling on mobile

--- a/frontend/src/components/page/page.module.scss
+++ b/frontend/src/components/page/page.module.scss
@@ -4,7 +4,6 @@
     display: grid;
     height: calc(100vh - 4.5em);
 
-    gap: 1vmax;
     margin-left: 1vw;
     margin-right: 1vw;
 
